--- a/resumeproject/main/templates/main/base.html
+++ b/resumeproject/main/templates/main/base.html
@@ -1,8 +1,43 @@
-<!DOCTYPE html>
+{% load static %}
+
+<link rel="stylesheet", type="text/css", href="{% static 'main/css/bootstrap.css' %}" /> 
 
 <html>
+   
+    <head>
+
+        <title>{% block title %} University Calculator {% endblock %}</title>
+
+    </head>
+
+    <body>
+        
+        <nav class="navbar navbar-expand-lg", style="background-color:#738FA7">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="/home">Algebra Calculator</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                  <a class="nav-link active" aria-current="page" href="/home">Home</a>
+                  <a class="nav-link" href="/algebra-calculator">Algebra Calculators</a>
+                  <a class="nav-link" href="/calculus-calculator">Calculus Calculators</a>
+                  <a class="nav-link" href="/about-us">About Us</a>
+                </div>
+              </div>
+            </div>
+        </nav>
+        
+        <div>
+
+            {% block content %} Main Body of the page {% endblock %}
+
+        </div>
+
+    </body>
+
     
-    <h1>Hello</h1>
 
 
 </html>
