--- a/resumeproject/main/templates/main/base.html
+++ b/resumeproject/main/templates/main/base.html
@@ -6,27 +6,52 @@
    
     <head>
 
-        <title>{% block title %} University Calculator {% endblock %}</title>
-
+      <title>{% block title %} University Calculator {% endblock %}</title>
+      <meta charset="utf-8" />
+      <meta name="viewport", content="width=device-width, initial-scale=1" />
+        
     </head>
 
     <body>
         
-        <nav class="navbar navbar-expand-lg", style="background-color:#738FA7">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="/home">Algebra Calculator</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
+
+        <nav class="navbar navbar-expand-lg bg-body-tertiary"3  >
+          <div class="container-fluid">
+            <a class="navbar-brand" href="/home">The Calculator</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+              <ul class="navbar-nav">
+                <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="/home">Home</a>
-                  <a class="nav-link" href="/algebra-calculator">Algebra Calculators</a>
-                  <a class="nav-link" href="/calculus-calculator">Calculus Calculators</a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Algebra Calculators
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="/calculus-calculator">All Calculators</a></li>
+                    <li><a class="dropdown-item" href="/greatest-common-divisor">GCD Calculator</a></li>
+                    <li><a class="dropdown-item" href="/ldet">LDET Calculator</a></li>
+                    <li><a class="dropdown-item" href="/prime-factorization">Prime Factorization</a></li>
+                  </ul>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Calculus Calculators
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="/algebra-calculator">All Calculators</a></li>
+                    <li><a class="dropdown-item" href="/home">Nothing Here Yet</a></li>
+                  </ul>
+                </li>
+                <li class="nav-item">
                   <a class="nav-link" href="/about-us">About Us</a>
-                </div>
-              </div>
+                </li>
+              </ul>
             </div>
+          </div>
         </nav>
         
         <div>
@@ -34,6 +59,9 @@
             {% block content %} Main Body of the page {% endblock %}
 
         </div>
+        
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
 
     </body>
 
