--- a/resumeproject/main/templates/main/gcd.html
+++ b/resumeproject/main/templates/main/gcd.html
@@ -5,11 +5,48 @@ Greatest Common Divisor
 {% endblock %}
 
 {% block content %}
-<form method="post" action="/greatest-common-divisor">
-    {% csrf_token %}
-    {{form}}
-    <button type="submit", name="calculate">Calculate</button>
-</form>
 
-<h1>{{answer}}</h1>
+<div class="container text-center">
+  <div class="row g-2">
+    <div class="col-6", style="padding-top: 50px;">
+      <div class="p-3">
+
+        <div class="card w-70">
+            <div class="card-body">
+              <h5 class="card-title">Greatest Common Divisor</h5>
+              <p class="card-text">The greatest common divisor (also known as the greatest common factor) is the largest positive integer that divides two or more numbers without a remainder. It is used to determine the highest number that is a factor of both numbers.</p>
+            </div>
+        </div>
+
+      </div>
+    </div>
+    <div class="col-6", style="padding-top: 50px;">
+      <div class="p-3">
+
+        <div class="card w-70">
+            <div class="card-body">
+              <h5 class="card-title">Usage</h5>
+              <p class="card-text">Use the calculator below to calculate the gcd of any two positive integers. Type in the first integer in the first input field, the second integer in the second input field, and finally press calculate!</p>
+            </div>
+        </div>
+
+      </div>
+    </div>
+    <div class="col-6", style="padding-top: 100px;">
+      <div class="p-3">
+
+        <form method="post" action="/greatest-common-divisor/">
+            {% csrf_token %}
+            {{form.as_p}}
+            <button type="submit", name="calculate", class="btn btn-primary">Calculate</button>
+        </form>
+
+      </div>
+    </div>
+    <div class="col-6", style="padding-top: 100px;">
+      <div class="p-3"><h2>{{answer}}</h2></div>
+    </div>
+  </div>
+</div>
+
 {% endblock %}
