Worked on html files.

--- a/resumeproject/main/templates/main/alg_c.html
+++ b/resumeproject/main/templates/main/alg_c.html
@@ -5,5 +5,64 @@ Algebra Calculators
 {% endblock %}
 
 {% block content %}
-This is the algebra calculator.
+<div class="container">
+    <div class="row">
+     
+        <div class="col" style="padding-top: 100px;">
+            
+            <div class="card">
+                <div class="card-header">
+                  Greatest Common Divisor
+                </div>
+                <div class="card-body">
+                  <p class="card-text">Calculate the greatest common divisor of two positive integers using our built-in calculator.</p>
+                  <a href="/greatest-common-divisor" class="btn btn-primary">Calculator</a>
+                </div>
+              </div>
+
+              <div style="padding-top: 100px;">
+              <div class="card">
+                <div class="card-header">
+                  Featured
+                </div>
+                <div class="card-body">
+                  <h5 class="card-title">Special title treatment</h5>
+                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+              </div>
+
+        </div>
+
+        <div class="col" style="padding-top: 100px;">
+            
+            <div class="card">
+                <div class="card-header">
+                  Featured
+                </div>
+                <div class="card-body">
+                  <h5 class="card-title">Special title treatment</h5>
+                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+              
+              <div style="padding-top: 100px;">
+              <div class="card">
+                <div class="card-header">
+                  Featured
+                </div>
+                <div class="card-body">
+                  <h5 class="card-title">Special title treatment</h5>
+                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+              </div>
+
+        </div>
+    
+    </div>
+</div>
 {% endblock %}
