--- a/resumeproject/main/templates/main/gcd.html
+++ b/resumeproject/main/templates/main/gcd.html
@@ -6,7 +6,7 @@ Greatest Common Divisor
 
 {% block content %}
 
-<div class="container text-center">
+<div class="container">
   <div class="row g-2">
     <div class="col-6", style="padding-top: 50px;">
       <div class="p-3">
