--- a/resumeproject/main/templates/main/base.html
+++ b/resumeproject/main/templates/main/base.html
@@ -9,11 +9,7 @@
     <style type="text/css">
       
       /*
-      body {
-        background-color: #282828;
-        background-size: cover;
-        z-index: -1;
-      } 
+      
       .navbar-nav{
         height: 100px;
         width: 100%;
@@ -71,7 +67,7 @@
         text-align: left;
       }
       .navbar-nav ul li a{
-        color: #e9c8e9;
+        color: #2aa1b1;
         display: block;
         text-decoration: none;
       }
@@ -81,7 +77,18 @@
       .dropdown-item {
         color: #771a77;
       }
-
+      .poop1 {
+        background-color: #240090
+      }
+      body {
+        background-color: #282828;
+        background-size: cover;
+        
+      } 
+      .poop3 {
+        color: white;
+        
+      }
       
       
 
@@ -104,7 +111,7 @@
     <body>
         
 
-        <nav class="navbar navbar-expand-lg bg-body-tertiary"3  >
+        <nav class="navbar navbar-expand-lg bg-body-tertiary poop1" >
           <div class="container-fluid">
             <a class="navbar-brand" href="/home">The Calculator</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -120,7 +127,7 @@
                     Algebra Calculators
                   </a>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="/calculus-calculator">All Calculators</a></li>
+                    <li><a class="dropdown-item poop1" href="/calculus-calculator">All Calculators</a></li>
                     <li><a class="dropdown-item" href="/greatest-common-divisor">GCD Calculator</a></li>
                     <li><a class="dropdown-item" href="/ldet">LDET Calculator</a></li>
                     <li><a class="dropdown-item" href="/prime-factorization">Prime Factorization</a></li>
@@ -143,7 +150,7 @@
           </div>
         </nav>
         
-        <div>
+        <div class="poop3">
 
             {% block content %} Main Body of the page {% endblock %}
 
