--- a/resumeproject/main/templates/main/base.html
+++ b/resumeproject/main/templates/main/base.html
@@ -59,6 +59,7 @@
       .container-fluid a{
         color: #e9c8e9;
       } 
+      */
 
       .navbar-nav{
         color: #ab17ab;
@@ -78,19 +79,13 @@
         color: #771a77;
 
       }
-      .poop1 {
-        background-color: #240090
-      }
       body {
         background-color: #282828;
         background-size: cover;
         
       } 
-      .poop3 {
-        color: white;
-        
-      }
-      */
+      
+      
       
       
 
@@ -113,7 +108,7 @@
     <body>
         
 
-        <nav class="navbar navbar-expand-lg bg-body-tertiary poop1" >
+        <nav class="navbar navbar-expand-lg bg-body-tertiary" >
           <div class="container-fluid">
             <a class="navbar-brand" href="/home">The Calculator</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -129,7 +124,7 @@
                     Algebra Calculators
                   </a>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item poop1" href="/calculus-calculator">All Calculators</a></li>
+                    <li><a class="dropdown-item" href="/calculus-calculator">All Calculators</a></li>
                     <li><a class="dropdown-item" href="/algebra-calculator">All Calculators</a></li>
                     <li><a class="dropdown-item" href="/greatest-common-divisor">GCD Calculator</a></li>
                     <li><a class="dropdown-item" href="/ldet">LDET Calculator</a></li>
@@ -153,7 +148,7 @@
           </div>
         </nav>
         
-        <div class="poop3">
+        <div>
 
             {% block content %} Main Body of the page {% endblock %}
 
