--- a/resumeproject/main/templates/main/base.html
+++ b/resumeproject/main/templates/main/base.html
@@ -80,10 +80,12 @@
 
       }
       body {
-        background-color: #282828;
+        background: #3500d3;
+        background: -webkit-linear-gradient(0deg, #3500d3 0%, #190061 100%);
+        background: linear-gradient(0deg, #3500d3 0%, #190061 100%);
         background-size: cover;
         
-      } 
+      }
       
       
       
@@ -108,7 +110,7 @@
     <body>
         
 
-        <nav class="navbar navbar-expand-lg bg-body-tertiary" >
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
           <div class="container-fluid">
             <a class="navbar-brand" href="/home">The Calculator</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
