Aesthetic changes - started models.py
- Deleted unnecessary code
- Colours for boxes / text, etc..

--- a/resumeproject/main/templates/main/about_us.html
+++ b/resumeproject/main/templates/main/about_us.html
@@ -5,5 +5,7 @@ About Us
 {% endblock %}
 
 {% block content %}
-This is the about us page.
+This for everybody going through tough times <br>
+Believe me, been there, done that <br>
+But every day above ground is a great day, remember that (Dali!)
 {% endblock %}
