--- a/resumeproject/main/templates/main/base.html
+++ b/resumeproject/main/templates/main/base.html
@@ -1,6 +1,7 @@
 {% load static %}
 
 <link rel="stylesheet", type="text/css", href="{% static 'main/css/bootstrap.css' %}" /> 
+<!DOCTYPE html>
 
 <html>
   <head>
@@ -8,83 +9,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style type="text/css">  
       
-      /*
       
-      .navbar-nav{
-        height: 100px;
-        width: 100%;
-        color: #ab17ab;
-      }
-      .navbar-nav ul{
-        list-style: none;
-      }
+      
       .navbar-nav ul li{
-        float: left;
-        width: 200px;
-        height: 50px;
         text-align: center;
       }
       .navbar-nav ul li a{
-        color: #e9c8e9;
-        display: block;
-        text-decoration: none;
-
-      }
-      .navbar-nav ul li a:hover {
-        color:#e9dde9;
-      }
-
-      .dropdown-menu ul li{
-        background: firebrick;
-        display: none;
-      }
-      .dropdown-menu ul li a{
-        color: green;
-      }
-      .dropdown-menu ul li a:hover{
-        background: rgb(11, 141, 145);
-        color: rgb(54, 156, 156);
-      }
-      .navbar-nav ul li:hover ul li{
-        display: block;
-      }
-      .dropdown-menu ul li:nth-child(1){
-        animation: animate 500ms ease;
-      }
-
-      .container-fluid a:hover{
-        color:#e9dde9;
-
-      }   
-      .container-fluid a{
-        color: #e9c8e9;
-      } 
-      */
-
-      .navbar-nav{
-        color: #ab17ab;
-      }
-      .navbar-nav ul li{
-        text-align: left;
-      }
-      .navbar-nav ul li a{
-        color: #2aa1b1;
+        color: #ffffff;
+        background-color: black;
         display: block;
         text-decoration: none;
       }
-      .nav-item ul li{
-        color: #771a77;
-      }
-      .dropdown-item {
-        color: #771a77;
-
-      }
+      
+      
       body {
         background: #3500d3;
         background: -webkit-linear-gradient(0deg, #3500d3 0%, #190061 100%);
         background: linear-gradient(0deg, #3500d3 0%, #190061 100%);
-        background-size: cover;
+        background-size: cover; 
         
+      }
+      .fontfix {
+        font-family: 'Courier New', Courier, monospace;
+        padding-left: 2%;
+      }
+      .navbar-header{
+        color: #ffffff;
+      }
+      .navbar-header:hover {
+        color: grey
       }
       
       
@@ -101,7 +54,8 @@
    
     <head>
 
-      <title>{% block title %} University Calculator {% endblock %}</title>
+      <title>{% block title %} UW M135/137 Calculator {% endblock %}</title>
+      <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
       <meta charset="utf-8" />
       <meta name="viewport", content="width=device-width, initial-scale=1" />
         
@@ -110,47 +64,46 @@
     <body>
         
 
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary fontfix">
           <div class="container-fluid">
-            <a class="navbar-brand" href="/home">The Calculator</a>
+            <a class="navbar-brand navbar-header" href="/home">The Calculator</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/home">Home</a>
+                  <a class="nav-link navbar-header" href="/home">Home</a>
                 </li>
                 <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Algebra Calculators
+                  <a class="nav-link dropdown-toggle navbar-header" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    M135 Calculators
                   </a>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="/calculus-calculator">All Calculators</a></li>
-                    <li><a class="dropdown-item" href="/algebra-calculator">All Calculators</a></li>
+                    <li><a class="dropdown-item" href="/algebra-calculator">All M135 Calculators</a></li>
                     <li><a class="dropdown-item" href="/greatest-common-divisor">GCD Calculator</a></li>
                     <li><a class="dropdown-item" href="/ldet">LDET Calculator</a></li>
                     <li><a class="dropdown-item" href="/prime-factorization">Prime Factorization</a></li>
                   </ul>
                 </li>
                 <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Calculus Calculators
+                  <a class="nav-link dropdown-toggle navbar-header" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    M137 Calculators
                   </a>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="/calculus-calculator">All Calculators</a></li>
+                    <li><a class="dropdown-item" href="/calculus-calculator">All M137 Calculators</a></li>
                     <li><a class="dropdown-item" href="/home">Nothing Here Yet</a></li>
                   </ul>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/about-us">About Us</a>
+                  <a class="nav-link navbar-header" href="/about-us">About Us</a>
                 </li>
               </ul>
             </div>
           </div>
         </nav>
         
-        <div>
+        <div class="fontfix", style="padding: 5%; color: #ffffff;">
 
             {% block content %} Main Body of the page {% endblock %}
 
