--- a/resumeproject/main/templates/main/base.html
+++ b/resumeproject/main/templates/main/base.html
@@ -9,18 +9,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style type="text/css">  
       
-      
-      
       .navbar-nav ul li{
         text-align: center;
       }
       .navbar-nav ul li a{
-        color: #ffffff;
-        background-color: black;
+        color: black;
+        background-color: white;
         display: block;
         text-decoration: none;
       }
-      
       
       body {
         background: #3500d3;
@@ -39,13 +36,7 @@
       .navbar-header:hover {
         color: grey
       }
-      
-      
-      
-      
 
-      
-      
 
     </style>
     
@@ -58,6 +49,7 @@
       <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
       <meta charset="utf-8" />
       <meta name="viewport", content="width=device-width, initial-scale=1" />
+      <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
         
     </head>
 
