--- a/resumeproject/main/templates/main/gcd.html
+++ b/resumeproject/main/templates/main/gcd.html
@@ -12,7 +12,7 @@ Greatest Common Divisor
       <div class="p-3">
 
         <div class="card w-70">
-            <div class="card-body">
+            <div class="card-body" style="color:black;">
               <h5 class="card-title">Greatest Common Divisor</h5>
               <p class="card-text">The greatest common divisor (also known as the greatest common factor) is the largest positive integer that divides two or more numbers without a remainder. It is used to determine the highest number that is a factor of both numbers.</p>
             </div>
@@ -24,7 +24,7 @@ Greatest Common Divisor
       <div class="p-3">
 
         <div class="card w-70">
-            <div class="card-body">
+            <div class="card-body" style="color: black;">
               <h5 class="card-title">Usage</h5>
               <p class="card-text">Use the calculator below to calculate the gcd of any two positive integers. Type in the first integer in the first input field, the second integer in the second input field, and finally press calculate!</p>
             </div>
@@ -34,17 +34,29 @@ Greatest Common Divisor
     </div>
     <div class="col-6", style="padding-top: 100px;">
       <div class="p-3">
-
-        <form method="post" action="/greatest-common-divisor/">
-            {% csrf_token %}
-            {{form.as_p}}
-            <button type="submit", name="calculate", class="btn btn-primary">Calculate</button>
-        </form>
+        
+        <div class="card w-70" style="color: black;">
+          <div style="padding-top: 20px; padding-bottom: 20px; padding-left: 20px;">
+            <form method="post" action="/greatest-common-divisor/">
+                {% csrf_token %}
+                {{form.as_p}}
+                <button type="submit", name="calculate", class="btn btn-primary">Calculate</button>
+            </form>
+          </div>
+        </div>
 
       </div>
     </div>
     <div class="col-6", style="padding-top: 100px;">
-      <div class="p-3"><h2>{{answer}}</h2></div>
+      <div class="p-3">
+        
+        <div class="card w-70" style="color: black; padding-bottom: 70px;">
+          <div style="padding-top: 70px; padding-left: 10px;">
+            <h2>{{answer}}</h2>
+          </div>
+        </div>
+      
+      </div>
     </div>
   </div>
 </div>
