Work in progress on the ldet.html file.

--- a/resumeproject/main/templates/main/gcd.html
+++ b/resumeproject/main/templates/main/gcd.html
@@ -14,7 +14,7 @@ Greatest Common Divisor
         <div class="card w-70">
             <div class="card-body" style="color:black;">
               <h5 class="card-title">Greatest Common Divisor</h5>
-              <p class="card-text">The greatest common divisor (also known as the greatest common factor) is the largest positive integer that divides two or more numbers without a remainder. It is used to determine the highest number that is a factor of both numbers.</p>
+              <p class="card-text">The greatest common divisor is the largest positive integer that divides two or more numbers without a remainder. It is used to determine the highest number that is a factor of both numbers.</p>
             </div>
         </div>
 
@@ -26,7 +26,7 @@ Greatest Common Divisor
         <div class="card w-70">
             <div class="card-body" style="color: black;">
               <h5 class="card-title">Usage</h5>
-              <p class="card-text">Use the calculator below to calculate the gcd of any two positive integers. Type in the first integer in the first input field, the second integer in the second input field, and finally press calculate!</p>
+              <p class="card-text">Use the calculator below to calculate the gcd of any two positive integers. Type in the first integer in the first input field, the second integer in the second input field, and press calculate!</p>
             </div>
         </div>
 
