--- a/resumeproject/main/templates/main/prime_fac.html
+++ b/resumeproject/main/templates/main/prime_fac.html
@@ -15,7 +15,7 @@ Prime Factorization
                 <h5 class="card-title">Prime Factorization</h5>
                 <p class="card-text">
 
-                    Prime factorization is the process of expressing a number as a product of its prime factors. A prime number is a positive integer with no positive integer divisors other than 1 and itself. For example, the prime factorization of 15 is 3 * 5. Prime factorization has many applications, including in number theory, algebra, and cryptography.
+                    Prime factorization is the process of expressing a number as a product of its prime factors. A prime number is a positive integer with no positive integer divisors other than 1 and itself. For example, the prime factorization of 15 is 3 * 5. 
 
                 </p>
               </div>
@@ -27,9 +27,9 @@ Prime Factorization
         <div class="p-3">
   
           <div class="card w-70">
-              <div class="card-body" style="color: black; padding-bottom: 40px;">
+              <div class="card-body" style="color: black;">
                 <h5 class="card-title">Usage</h5>
-                <p class="card-text">Use the calculator below to calculate the the prime factorization of any positive integer. Type in the integer input field, and press calculate! The result will be given in the form x^y z^a. For Example the prime factorization of 24 is 2^3 3</p>
+                <p class="card-text">Use the calculator below to calculate the the prime factorization of any positive integer. Type in the integer input field, and press calculate! The result will be given in the form x^y z^a. For Example the prime factorization of 24 is 2^3 3.</p>
               </div>
           </div>
   
@@ -42,7 +42,7 @@ Prime Factorization
             <div style="padding-top: 20px; padding-bottom: 20px; padding-left: 20px;">
                 <form method="post" action="/prime-factorization/">
                     {% csrf_token %}
-                    {{form}}
+                    {{form.as_p}}
                     <button type="submit", name="calculate" class="btn btn-primary">Calculate</button>
                 </form>
             </div>
