Added links to the buttons in the alg_c.html document.

--- a/resumeproject/main/templates/main/alg_c.html
+++ b/resumeproject/main/templates/main/alg_c.html
@@ -20,7 +20,9 @@ Algebra Calculators
 
               </p>
               <div style="padding-top: 25px;">
-                <button class="btn btn-primary">Go to the calculator</button>
+                <a href="/greatest-common-divisor">
+                  <button class="btn btn-primary">Go to the calculator</button>
+                </a>
               </div>
             </div>
         </div>
@@ -38,7 +40,9 @@ Algebra Calculators
                 A linear Diophantine equation is a type of mathematical equation that involves finding integer solutions for variables in the form of ax + by = c, where a, b, and c are constants and x and y are the variables. These types of equations are used to solve problems involving finding the number of ways to represent a given quantity in terms of two other quantities, such as finding the number of ways to make change for a certain amount of money using different denominations of coins. Linear Diophantine equations can be solved using a variety of methods, including the extended Euclidean algorithm and the substitution method. They have numerous real-world applications, including in computer science and cryptography, and are an important concept in number theory and algebra.
 
               </p>
-              <button class="btn btn-primary">Go to the calculator</button>
+              <a href="/ldet">
+                <button class="btn btn-primary">Go to the calculator</button>
+              </a>  
             </div>
         </div>
 
@@ -56,8 +60,10 @@ Algebra Calculators
 
             </p>
             <div style="padding-top: 25px;">
-              <button class="btn btn-primary">Go to the calculator</button>
-            </div>
+              <a href="/prime-factorization">
+                <button class="btn btn-primary">Go to the calculator</button>
+              </a>  
+              </div>
           </div>
       </div>
 
@@ -74,8 +80,10 @@ Algebra Calculators
               The Chinese remainder theorem is a mathematical concept that allows for the finding of the solutions of a system of simultaneous congruences. It states that if x is congruent to a1 modulo m1, x is congruent to a2 modulo m2, and so on, then x can be found uniquely modulo the product of the moduli. The theorem has numerous real-world applications, including in computer science and cryptography, and is an important concept in number theory and algebra. The Chinese remainder theorem can be used to solve systems of simultaneous congruences by expressing the solutions as a system of linear Diophantine equations and solving them using a variety of methods, such as the extended Euclidean algorithm and the substitution method. It is also used in the study of modular arithmetic and in the construction of algorithms for finding solutions to systems of congruences.
 
             </p>    
-            <button class="btn btn-primary">Go to the calculator</button>
-          </div>
+            <a href="#">
+              <button class="btn btn-primary">Go to the calculator</button>
+            </a>  
+            </div>
       </div>
       
       </div>
