Pushed original computer changes here
(all this was done by hand)
(desktop no work so i screenshotted code and retyped here)

--- a/resumeproject/main/templates/main/base.html
+++ b/resumeproject/main/templates/main/base.html
@@ -76,6 +76,7 @@
                     <li><a class="dropdown-item" href="/greatest-common-divisor">GCD Calculator</a></li>
                     <li><a class="dropdown-item" href="/ldet">LDET Calculator</a></li>
                     <li><a class="dropdown-item" href="/prime-factorization">Prime Factorization</a></li>
+                    <li><a class="dropdown-item" href="/crt">Chinese Remainder Theorem</a></li>
                   </ul>
                 </li>
                 <li class="nav-item dropdown">
