*last changes was implementing CRT
*still unsuccessful, need help on error

--- a/resumeproject/main/templates/main/base.html
+++ b/resumeproject/main/templates/main/base.html
@@ -10,7 +10,7 @@
     <style type="text/css">  
       
       .navbar-nav ul li{
-        text-align: center;
+        text-align: left;
       }
       .navbar-nav ul li a{
         color: black;
