--- a/resumeproject/main/templates/main/base.html
+++ b/resumeproject/main/templates/main/base.html
@@ -10,7 +10,7 @@
     <style type="text/css">  
       
       .navbar-nav ul li{
-        text-align: center;
+        text-align: left;
       }
       .navbar-nav ul li a{
         color: black;
@@ -76,6 +76,7 @@
                     <li><a class="dropdown-item" href="/greatest-common-divisor">GCD Calculator</a></li>
                     <li><a class="dropdown-item" href="/ldet">LDET Calculator</a></li>
                     <li><a class="dropdown-item" href="/prime-factorization">Prime Factorization</a></li>
+                    <li><a class="dropdown-item" href="/crt">Chinese Remainder Theorem</a></li>
                   </ul>
                 </li>
                 <li class="nav-item dropdown">
