--- a/resumeproject/main/templates/main/home.html
+++ b/resumeproject/main/templates/main/home.html
@@ -6,6 +6,12 @@
 
 {% block content %}
 
+<div style="padding-bottom: 100px;">
+
+  <h1>All the Calculators you need in one Place.</h1>
+
+</div>
+
 <div class="container text-left">
     <div class="row g-2">
       <div class="col-6">
@@ -28,7 +34,24 @@
         </div>
       </div>
       <div class="col-6">
-        <div class="p-3">Bottom Left</div>
+        <div class="p-3">
+
+          <div>
+            <div>
+              <p>
+                Don't know what our calculators are? Don't know where to start? 
+                Try out a random button from our website, by clicking the button below.
+                Our Calculators include a short description of what is being calculated 
+                by our calculator.
+              </p>
+              <div>
+                <button type="button", onclick="openLink()", class="btn btn-primary">Random Link</button>
+              </div>
+
+            </div>
+          </div>
+
+        </div>
       </div>
       <div class="col-6">
         <div class="p-3">Bottom Right</div>
